# openenv-scalar

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: email_env.py  graders.py
server/: app.py
